[gd_scene load_steps=9 format=2]

[ext_resource path="res://interface/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://interface/TitleScreen.png" type="Texture" id=2]
[ext_resource path="res://interface/buttons/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/buttons/HelpButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/buttons/QuitButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/player/head_front.png" type="Texture" id=6]
[ext_resource path="res://interface/fonts/titanone_24.tres" type="DynamicFont" id=7]
[ext_resource path="res://interface/fade_in/FadeIn.tscn" type="PackedScene" id=8]

[node name="TitleScreen" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.0939941, 0.21875, 0.180738, 1 )

[node name="Menu" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 688.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="Logo" type="TextureRect" parent="Menu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 784.0
margin_bottom = 141.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 145.0
margin_right = 784.0
margin_bottom = 374.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 390.0
margin_bottom = 229.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" index="0" instance=ExtResource( 3 )]

margin_top = 4.0
margin_right = 390.0
margin_bottom = 64.0
scene_to_load = "res://Game.tscn"

[node name="HelpButton" parent="Menu/CenterRow/Buttons" index="1" instance=ExtResource( 4 )]

margin_top = 84.0
margin_right = 390.0
margin_bottom = 144.0
scene_to_load = "res://interface/HelpPage.tscn"

[node name="QuitButton" parent="Menu/CenterRow/Buttons" index="2" instance=ExtResource( 5 )]

margin_top = 164.0
margin_right = 390.0
margin_bottom = 224.0
scene_to_load = "res://interface/QuitPage.tscn"

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 394.0
margin_right = 784.0
margin_bottom = 229.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="Character" type="TextureRect" parent="Menu/CenterRow/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 172.0
margin_top = 87.0
margin_right = 218.0
margin_bottom = 141.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0

[node name="VersionLabel" type="Label" parent="Menu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 378.0
margin_right = 784.0
margin_bottom = 608.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Created for Ludum Dare 42"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="FadeIn" parent="." index="2" instance=ExtResource( 8 )]

visible = false

[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_mouse_entered"]

[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/HelpButton" to="." method="_on_HelpButton_mouse_entered"]

[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/QuitButton" to="." method="_on_QuitButton_mouse_entered"]

[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]


